mysql-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-practice
  template:
    metadata:
      labels:
        app: mysql-practice
    spec:
      containers:
        - name: my-todo-mysql
          image: mysql
          ports:
            - name: mysql-port
              containerPort: 3306
          volumeMounts:
            - name: mysql-init-scripts
              mountPath: docker-entrypoint-initdb.d/init.sql
          #args:
          #  - /bin/sh
          #  - -c
          #  - touch /tmp/healthy; sleep 30;
          #  - rm -rf /tmp/healthy; sleep 600
          # k8s pod 健康檢查
          livenessProbe:
            #exec:
            #  command:
            #    - cat
            #    - /tmp/healthy
            #initialDelaySeconds: 5
            #failureThreshold: 3 # health check 失敗後, k8s 會重試次數
            #periodSeconds: 5 # 每秒 health check
            tcpSocket:
              port: 3306
            initialDelaySeconds: 60
            periodSeconds: 60
          resources: {}
      volumes:
        - name: mysql-init-scripts
          hostPath:
            path: /Users/aarontai/Desktop/simple-project/k8s-project/scripts/mysql/init.sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-practice-service
spec:
  type: NodePort
  selector:
    app: mysql-practice
  ports:
    - name: mysql-practice
      protocol: TCP
      port: 3306
      targetPort: mysql-port
      nodePort: 30001
